# typical_python_project_with_spark

./: README.md  pyproject.toml  requirements.txt
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _heapq.data.json  _heapq.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _tkinter.data.json  _tkinter.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  (+236 more)
.mypy_cache/3.10/IPython/: __init__.data.json  __init__.meta.json  display.data.json  display.meta.json  paths.data.json  paths.meta.json
.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json  xml.data.json  xml.meta.json
.mypy_cache/3.10/asttokens/: __init__.data.json  __init__.meta.json  astroid_compat.data.json  astroid_compat.meta.json  asttokens.data.json  asttokens.meta.json  line_numbers.data.json  util.data.json  (+4 more)
.ruff_cache/content/: 98f8b41700a07b28  d1fa2c7415117c14  f8647e4e7b1a6ca6
tests/weather/: test_main.py
weather/: main.py
weather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1750 files in other folders)
